fix spacing issue for mission statement

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -163,6 +163,7 @@ nav ul li:hover a {
 }
 
 #mission-statement {
+    padding-left: 30px;
     float: left;
     width: 40%;
     line-height: 1.5;
